// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfilePhoto renders the ProfilePhoto element 1`] = `
<div>
  <img
    alt="Profile photo"
    class="object-cover object-center h-32 w-32 md:h-40 md:w-40 rounded-full"
    data-nimg="1"
    decoding="async"
    height="100"
    loading="lazy"
    src="/_next/image?url=https%3A%2F%2Fpicsum.photos%2Fseed%2FNnrmrbF4%2F640%2F480&w=256&q=75"
    srcset="/_next/image?url=https%3A%2F%2Fpicsum.photos%2Fseed%2FNnrmrbF4%2F640%2F480&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Fpicsum.photos%2Fseed%2FNnrmrbF4%2F640%2F480&w=256&q=75 2x"
    style="color: transparent;"
    width="100"
  />
</div>
`;

exports[`ProfilePhoto renders the ProfilePhoto without url prop 1`] = `
<div>
  <img
    alt="Profile photo"
    class="object-cover object-center h-32 w-32 md:h-40 md:w-40 rounded-full"
    data-nimg="1"
    decoding="async"
    height="100"
    loading="lazy"
    src="/_next/image?url=%2Fimg.jpg&w=256&q=75"
    srcset="/_next/image?url=%2Fimg.jpg&w=128&q=75 1x, /_next/image?url=%2Fimg.jpg&w=256&q=75 2x"
    style="color: transparent;"
    width="100"
  />
</div>
`;
